@@ -1,7 +1,7 @@
 Package: multiGSEA
 Type: Package
 Title: One GSEA interface to rule them all
-Version: 0.2.5
+Version: 0.2.6
 Date: 2015-05-21
 Authors@R: as.person(c(
     "Steve Lianoglou <lianoglou.steve@gene.com> [aut, cre]"
@@ -50,6 +50,6 @@ Collate:
     'multiGSEA.R'
     'plots.R'
     'reactome.R'
-    'score-genesets.R'
+    'scoreSingleSamples.R'
     'testing-helpers.R'
     'utilities.R'
