@@ -26,7 +26,7 @@ export(p.matrix)
 export(result)
 export(resultNames)
 export(results)
-export(scoreGeneSets)
+export(scoreSingleSamples)
 export(selectedByHyperG)
 export(tabulateResults)
 export(validateInputs)
@@ -48,8 +48,10 @@ import(GSEABase)
 import(limma)
 import(reactome.db)
 importFrom(BiocGenerics,append)
+importFrom(GSVA,gsva)
 importFrom(data.table,setnames)
 importFrom(edgeR,DGEList)
+importFrom(edgeR,calcNormFactors)
 importFrom(matrixStats,rowVars)
 importFrom(reshape2,melt)
 importFrom(stringr,str_extract)
