@@ -1,10 +1,10 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/score-genesets.R
-\name{scoreGeneSets}
-\alias{scoreGeneSets}
+% Please edit documentation in R/scoreSingleSamples.R
+\name{scoreSingleSamples}
+\alias{scoreSingleSamples}
 \title{Score each genes over the columns of an expression matrix.}
 \usage{
-scoreGeneSets(gdb, y, methods = "plage", melted = FALSE, ...)
+scoreSingleSamples(gdb, y, methods = "plage", melted = FALSE, ...)
 }
 \arguments{
 \item{gdb}{A GeneSetDb}
