@@ -1,6 +1,7 @@
 context("Scoring Genesets")
+library(GSVA)
 
-test_that('do.scoreGeneSets.gsva is equivalent to GSVA::gsva', {
+test_that('do.scoreSingleSamples.gsva is equivalent to GSVA::gsva', {
   vm <- exampleExpressionSet()
   gdb <- getMSigDBset('h')
   lol <- as.list(gdb)
@@ -9,25 +10,26 @@ test_that('do.scoreGeneSets.gsva is equivalent to GSVA::gsva', {
   gdb <- conform(gdb, E)
 
   gsva.ex <- gsva(E, lol, method='gsva', verbose=FALSE)$es.obs
-  gsva.mg <- scoreGeneSets(gdb, E, methods='gsva', verbose=FALSE)
+  gsva.mg <- scoreSingleSamples(gdb, E, methods='gsva', verbose=FALSE)
   expect_equal(gsva.mg, gsva.ex,info='GSVA,gsva')
 
-  gsva.mg.melt <- scoreGeneSets(gdb, E, methods='gsva',
-                                verbose=FALSE, melted=TRUE)
+  # gsva.mg.melt <- scoreSingleSamples(gdb, E, methods='gsva',
+  #                               verbose=FALSE, melted=TRUE)
   plage.ex <- gsva(E, lol, method='plage', verbose=FALSE)
-  plage.mg <- scoreGeneSets(gdb, E, methods='plage', verbose=FALSE)
+  plage.mg <- scoreSingleSamples(gdb, E, methods='plage', verbose=FALSE)
   expect_equal(plage.mg, plage.ex,info='GSVA,gsva')
 
   es <- exampleExpressionSet(do.voom=FALSE)
   counts <- exprs(es)
+
   gsvar.ex <- gsva(counts, lol, method='gsva', rnaseq=TRUE,
                    verbose=FALSE)$es.obs
-  gsvar.mg <- scoreGeneSets(gdb, counts, method='gsva',
+  gsvar.mg <- scoreSingleSamples(gdb, counts, method='gsva',
                             rnaseq=TRUE, verbose=FALSE)
   expect_equal(gsvar.mg, gsvar.ex, info='GSVA,gsva RNAseq')
 
-  mg.z <- scoreGeneSets(gdb, E, methods='zscore',
-                        zsummary='sqrt')
+  # mg.z <- scoreSingleSamples(gdb, E, methods='zscore',
+  #                       zsummary='sqrt')
 })
 
 if (FALSE) {
